--- a/package.json
+++ b/package.json
@@ -1,20 +1,30 @@
 {
-  "name": "ponte",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "next": "12.3.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
-  },
-  "devDependencies": {
-    "eslint": "8.23.1",
-    "eslint-config-next": "12.3.0"
-  }
+    "name": "pont",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@emotion/react": "^11.10.4",
+        "@emotion/server": "^11.10.0",
+        "@emotion/styled": "^11.10.4",
+        "@mui/icons-material": "^5.10.3",
+        "@mui/material": "^5.10.5",
+        "@rainbow-me/rainbowkit": "^0.6.0",
+        "ethers": "^5.7.1",
+        "graphql": "^16.6.0",
+        "next": "12.3.0",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "urql": "^3.0.3",
+        "wagmi": "^0.6.6"
+    },
+    "devDependencies": {
+        "eslint": "8.23.1",
+        "eslint-config-next": "12.3.0"
+    }
 }
